[gd_scene load_steps=7 format=3 uid="uid://bquye700aqd5b"]

[ext_resource type="Texture2D" uid="uid://bgakkk5g20mm7" path="res://Textures/Player/player_sprite.png" id="1_fgbal"]
[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_uyscd"]
[ext_resource type="PackedScene" uid="uid://u0xb10jbvnx5" path="res://Scenes/Utility/hurtbox.tscn" id="3_kxr3w"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m5vpi"]
radius = 6.0
height = 20.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1lhka"]
size = Vector2(17, 23)

[sub_resource type="CircleShape2D" id="CircleShape2D_82q52"]
radius = 370.066

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_uyscd")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_fgbal")
hframes = 2

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 3)
shape = SubResource("CapsuleShape2D_m5vpi")

[node name="WalkTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="Hurtbox" parent="." instance=ExtResource("3_kxr3w")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(2, 2)
shape = SubResource("RectangleShape2D_1lhka")

[node name="Attack" type="Node2D" parent="."]

[node name="IceSpearTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="AttackTimer" type="Timer" parent="Attack/IceSpearTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="EnemyDetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_82q52")

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="timeout" from="Attack/IceSpearTimer" to="." method="_on_ice_spear_timer_timeout"]
[connection signal="timeout" from="Attack/IceSpearTimer/AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]

[editable path="Hurtbox"]
